# loctree

./: .gitignore  Cargo.toml  README.md  index.html  main.js  style.css  t.py
src/: main.rs
static/: index.html
static/css/: style.css
static/js/: main.js
