[package]
name = "loctree"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
json = "0.12.4"
tokei = "12.1.2"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }

[profile.release]
debug = true
